@@ -1,3 +1,7 @@
+2006-11-14  arjan <arjan at yirdis dot nl>
+
+        * setup.py: incremented version to 0.9.0
+
 2006-10-30  arjan <arjan at yirdis dot nl>
 
         * gaphor/storage.py: some updates, time to get it working again.
